--- a/site/select.html
+++ b/site/select.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Select Chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="shortcut icon" href="/files/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/files/favicon.ico" type="image/x-icon">
+
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
