Update about page

--- a/site/about.html
+++ b/site/about.html
@@ -55,6 +55,7 @@
 </head>
 <body>
 	<div class="about-container">
+        <div class="image-header"><img style="border-radius: 60px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" src="/files/cat-cats.png" alt="Con mèo tôi nuôi"></div>
 		<div class="about-title">Về trang web này</div>
 		<div class="about-desc">
 			Tôi bị rảnh.<br>
