--- a/index2.html
+++ b/index2.html
@@ -30,6 +30,7 @@
                 <div class="user-info" id="user-info">
                     <span id="username-display" style="font-weight: bold;"></span>
                     <button id="logout-btn" class="header-btn"><i class="fa fa-sign-out"></i></button>
+                    <button id="change-room-btn" class="header-btn"onclick="location.href='/change'"><i class="fa fa-exchange-alt"></i></button>
                 </div>
                 <div class="room-info" id="room-info">
                     <span id="roomname-display"></span>
