Added timestamp and image upload

--- a/site/index.html
+++ b/site/index.html
@@ -56,6 +56,10 @@
                 <!-- Messages will be dynamically added here by JavaScript -->
             </div>
             <footer class="message-input">
+                <label class="image-upload-label" title="Upload Image">
+                    📷
+                    <input type="file" class="image-upload" id="image-upload" accept="image/*">
+                </label>
                 <input type="text" id="message-input-field" placeholder="Type a message..." autocomplete="off" aria-autocomplete="list">
                 <button id="send-button"><i class="fas fa-paper-plane"></i></button>
             </footer>
